--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
       "command": "improviz.toggleText",
       "title": "Toggle Improviz Text"
     }],
+    "configuration": {
+      "title": "Improviz",
+      "properties": {
+        "improviz.url": {
+          "type": "string",
+          "default": "http://localhost:3000",
+          "description": "Improviz URL with hostname and port"
+        }
+      }
+    },
     "keybindings": [
       {
           "command": "improviz.runInImproviz",
